Inheritance tree metrics
Inheritance tree metrics

--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -1,10 +1,9 @@
-
 # -*- mode:cmake -*-
 if(NOT UNIX)
  	message(FATAL "Unsupported operating system")
 endif()
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -29,15 +28,28 @@ include_directories(
 	${CMAKE_CURRENT_SOURCE_DIR}/../antlr4-cpp-runtime-4.6-source/run/usr/local/include/antlr4-runtime
 	${CMAKE_CURRENT_SOURCE_DIR}/antlr-for-java
 	${CMAKE_CURRENT_SOURCE_DIR}/inc
+	${CMAKE_CURRENT_SOURCE_DIR}/inc/treeDescriptions
+	${CMAKE_CURRENT_SOURCE_DIR}/inc/treeVisitors
+	${CMAKE_CURRENT_SOURCE_DIR}/inc/treeStructure
 	)
 
 set(JWB_SRC
-	${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/src/metricsCalculator.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/src/customListener.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/src/classDescription.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/src/interfaceDescription.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/src/methodDescription.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/runSrc/main.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeDescriptions/treeMethodDescription.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeDescriptions/treeAttributeDescription.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeDescriptions/treeInterfaceDescription.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeDescriptions/treeClassDescription.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/visitor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/treePrinterVisitor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/inheritanceFactorVisitor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/attributeInheritanceFactorVisitor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/numberOfChildrenVisitor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/node.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/inheritanceTree.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/currentlyBuildingTree.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/inheritanceTreeConstructorListener.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/graphSearchFunctions.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeMetricsCalculator.cpp
 	${JWB-GENERATED_SRC}
 	)
 
