--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -8,6 +8,7 @@ cmake_minimum_required(VERSION 3.7)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -Wpedantic -O0")
 
 set(JWB-GENERATED_SRC
 	${CMAKE_CURRENT_SOURCE_DIR}/antlr-for-java/JavaLexer.cpp
