TreeMetrics scans and totalAnalyzis added.

--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -54,6 +54,7 @@ set(JWB_SRC
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/inheritanceFactorVisitor.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/attributeInheritanceFactorVisitor.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/numberOfChildrenVisitor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/classNamesVisitor.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/node.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/inheritanceTree.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/currentlyBuildingTree.cpp
