Tree metrics generic modification
* Generic for methods adding, bug fixing with MethodInheritanceFactor.

* Reference bug in NumberOfChildrenVisitor visitor fixing/

* Comments and asserts adding

* Input from many files 

Bugs fixing, input many files adding

* Many files for treeMetrics

* Cmake requirments reducing.

* Laziness for treeMetricsCalculator, boost::optional using for that.

* TreeMetrics scans and totalAnalyzis added.

* Comments added.

* Minor changes.

* Degree metrics added.

--- a/application/CMakeLists.txt
+++ b/application/CMakeLists.txt
@@ -3,6 +3,7 @@ if(NOT UNIX)
  	message(FATAL "Unsupported operating system")
 endif()
 
+cmake_minimum_required(VERSION 3.5)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -53,9 +54,11 @@ set(JWB_SRC
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/inheritanceFactorVisitor.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/attributeInheritanceFactorVisitor.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/numberOfChildrenVisitor.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeVisitors/classNamesVisitor.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/node.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/inheritanceTree.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/currentlyBuildingTree.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/constructInheritanceTree.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/inheritanceTreeConstructorListener.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeStructure/graphSearchFunctions.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/src/treeMetricsCalculator.cpp
